# ProyectoVision

./: .clang-format  .gitignore  CMakeLists.txt  Diagrama.puml  Doxyfile  DoxyfileLatex  README.md  _r_e_a_d_m_e_8md.html  analizadorSimetria.cc  analizadorSimetria.h  analizadorlandmarks_8cc.html  analizadorlandmarks_8cc__incl.dot  analizadorlandmarks_8h.html  analizadorlandmarks_8h__dep__incl.dot  analizadorlandmarks_8h__incl.dot  analizadorsimetria_8cc.html  analizadorsimetria_8cc__incl.dot  analizadorsimetria_8h.html  analizadorsimetria_8h__dep__incl.dot  analizadorsimetria_8h__incl.dot  annotated.html  annotated_dup.js  bug.html  class_analizador_landmarks-members.html  class_analizador_landmarks.html  class_analizador_landmarks.js  class_analizador_landmarks__coll__graph.dot  class_analizador_simetria-members.html  class_analizador_simetria.html  class_analizador_simetria.js  class_analizador_simetria__coll__graph.dot  class_extractor_landmarks-members.html  class_extractor_landmarks.html  class_extractor_landmarks.js  class_extractor_landmarks__coll__graph.dot  class_extractor_landmarks__inherit__graph.dot  class_extractor_landmarks_dlib-members.html  class_extractor_landmarks_dlib.html  class_extractor_landmarks_dlib.js  class_extractor_landmarks_dlib__coll__graph.dot  (+130 more)
docs/: _r_e_a_d_m_e_8md.html  analizadorlandmarks_8cc.html  analizadorlandmarks_8cc__incl.map  analizadorlandmarks_8cc__incl.md5  analizadorlandmarks_8h__dep__incl.map  analizadorlandmarks_8h__dep__incl.md5  analizadorsimetria_8cc.html  analizadorsimetria_8h.html  analizadorsimetria_8h__dep__incl.md5  analizadorsimetria_8h__incl.md5  annotated.html  annotated_dup.js  bug.html  class_analizador_landmarks-members.html  class_analizador_landmarks__coll__graph.map  class_analizador_simetria-members.html  class_analizador_simetria.js  class_analizador_simetria__coll__graph.map  class_analizador_simetria__coll__graph.md5  class_extractor_landmarks.js  class_extractor_landmarks__inherit__graph.map  class_extractor_landmarks_dlib-members.html  class_extractor_landmarks_dlib.html  class_extractor_landmarks_dlib.js  class_extractor_landmarks_dlib__inherit__graph.md5  class_extractor_landmarks_open_c_v-members.html  class_extractor_landmarks_open_c_v.html  class_extractor_landmarks_open_c_v.js  class_feeder-members.html  class_feeder__coll__graph.md5  class_frame_logger__coll__graph.map  class_frame_logger__coll__graph.md5  class_kinect_feeder-members.html  class_kinect_feeder__inherit__graph.map  class_kinect_feeder__inherit__graph.md5  class_mi_excepcion-members.html  class_video_feeder-members.html  class_video_feeder.html  class_video_feeder__inherit__graph.map  class_webcam_feeder.html  (+60 more)
include/: analizadorlandmarks.h  analizadorsimetria.h  estructuras.h  extractorlandmarks.h  extractorlandmarks_dlib.h  extractorlandmarks_opencv.h  feeder.h  framelogger.h  kinectfeeder.cc  kinectfeeder.h  landmarkslogger.h  videofeeder.cc  videofeeder.h  webcamfeeder.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  (+41 more)
src/: CMakeLists.txt  analizadorlandmarks.cc  analizadorsimetria.cc  extractorlandmarks.cc  extractorlandmarks_dlib.cc  extractorlandmarks_opencv.cc  feeder.cc  framelogger.cc  (+4 more)
test/: CMakeLists.txt  analizadorlandmarks_test.cc
(+199 files in other folders)
